11-kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wcg-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wcg
  template:
    metadata:
      labels:
        app: wcg
    spec:
      containers:
      - name: app
        image: ghcr.io/smirnovalexey/wcg:latest
