11-kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: wcg-service
spec:
  type: NodePort
  selector:
    app: wcg
  ports:
  - port: 8888
